hydro_lang/tests/compile-fail-stable/non_commutative.rs
../compile-fail/non_commutative.rs